--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
-Kevin Mwangi
-Joan Ndegwa <njerijoan24@gmail.com>
+Kevin Mwangi < mwangi8kevin@gmail.com >
+Joan Ndegwa < njerijoan24@gmail.com >
